# Snake

./: CMakeLists.txt  Compile.sh  README.md
include/: display.h  global.h  lib.h  logic.h
src/: display.cpp  lib.cpp  logic.cpp  main.cpp
